# mrs-amoscato-retirement

./: .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml
app/: PageLayout.module.scss  PageLayout.tsx  PickllleHeading.tsx  globals.css  layout.tsx  page.tsx
app/Cover/: Cover.module.css  Cover.tsx
app/Navigation/: Navigation.module.scss  Navigation.tsx  NavigationLink.module.scss  NavigationLink.tsx
app/Yearbook/: CloseButton.module.scss  CloseButton.tsx  IconButton.module.scss  IconButton.tsx  MobileNavigationButton.module.scss  MobileNavigationButton.tsx  NavigationButton.module.scss  NavigationButton.tsx  NavigationIconButton.module.scss  NavigationIconButton.tsx  SlideshowButton.module.scss  SlideshowButton.tsx  StyleSourceSummary.module.css  StyleSourceSummary.tsx  StyledPortraitImage.module.scss  StyledPortraitImage.tsx  Yearbook.module.css  Yearbook.tsx  YearbookPage.module.scss  YearbookPage.tsx  YearbookThumbnail.module.css  YearbookThumbnail.module.scss  YearbookThumbnail.tsx  index.ts  style-image.txt
app/Yearbook/hooks/: useActiveIndexState.ts  (+5 more)
app/about/: About.module.scss  About.tsx  Content.module.scss  Content.tsx  page.tsx
app/painting/: GalleryThumbnailImage.tsx  PaintingGallery.module.scss  PaintingGallery.tsx  page.tsx
app/timeline/: Timeline.module.scss  Timeline.tsx  TimelineYear.module.scss  TimelineYear.tsx  page.tsx
app/utils/: schoolYearFromYear.ts
image-stylization/: README.md  pyproject.toml
image-stylization/image_stylization/: main.py
scripts/: compressImages.ts
(+23 files in other folders)
